Update contact info and enhance about-us page
- Update contact details: waine@52weeks.dev, Broward/Dade Counties, (954) 696-5494
- Enhance about-us page with comprehensive mission, vision, story, and business model
- Add layout files for about-us, contact, and programs pages
- Add SEO files (robots.txt, sitemap.xml)
- Add domain notice component and middleware
- Fix CSS configuration and metadata warnings
- Update footer and header components

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,23 @@
 {
   "version": 2,
-  "buildCommand": "pnpm build",
-  "installCommand": "pnpm install",
-  "env": {
-    "NODE_ENV": "production"
-  }
+  "redirects": [
+    {
+      "source": "/(.*)",
+      "has": [{ "type": "host", "value": "52weeks-dev.org" }],
+      "destination": "https://www.52weeks.dev/$1",
+      "permanent": true
+    },
+    {
+      "source": "/(.*)",
+      "has": [{ "type": "host", "value": "www.52weeks-dev.org" }],
+      "destination": "https://www.52weeks.dev/$1",
+      "permanent": true
+    },
+    {
+      "source": "/(.*)",
+      "has": [{ "type": "host", "value": "52weeks.dev" }],
+      "destination": "https://www.52weeks.dev/$1",
+      "permanent": true
+    }
+  ]
 }
